# Hybrid-ANNS-Experiment

./: .gitignore  README.md
algorithm/Faiss/: CMakeLists.txt  README.md  build.sh  run_faiss.py
algorithm/Faiss/scr_range/: DataStructures.h  FileReader.h  HybridSearchExperiment.h  test_batch_or_nobatch.cc  test_getIndex.cc
algorithm/Faiss/src/: DataStructures_OneAttr.h  DataStructures_ThreeAttr.h  FileReader.h  HybridSearchExperiment.h  test_getIndex.cc  test_oneattr_nobatch_or_batch.cc  test_threeattr_nobatch_or_batch.cc
algorithm/Milvus/: README.md
algorithm/PASE/: README.md
algorithm/VBASE/: README.md
script/: run_NHQ.py  sun_NHQ_ood.py
script/ DSG/: run.py
script/CAPS/: run_caps.py  run_ood.py
script/DiskANN/: run.py  run_gt.py  run_ood.py
script/Milvus/audio/: milvus_mp_search.py  single_audio.ipynb
script/Milvus/audio/result/: 1_16_200_10.out  1_16_200_12.out  1_16_200_2.out  1_16_200_20.out  1_16_200_3.out  1_16_200_4.out  1_16_200_5.out  1_16_200_8.out  3_1_16_200_10.out  3_1_16_200_12.out  3_1_16_200_2.out  3_1_16_200_20.out  3_1_16_200_3.out  3_1_16_200_4.out  3_1_16_200_5.out  3_1_16_200_8.out  3_2_16_200_10.out  3_2_16_200_12.out  3_2_16_200_2.out  3_2_16_200_20.out  3_2_16_200_3.out  3_2_16_200_4.out  3_2_16_200_5.out  3_2_16_200_8.out  3_3_16_200_10.out  3_3_16_200_12.out  3_3_16_200_2.out  3_3_16_200_20.out  3_3_16_200_3.out  3_3_16_200_4.out  3_3_16_200_5.out  3_3_16_200_8.out  3_4_16_200_10.out  3_4_16_200_12.out  3_4_16_200_2.out  3_4_16_200_20.out  3_4_16_200_3.out  3_4_16_200_4.out  3_4_16_200_5.out  3_4_16_200_8.out  (+82 more)
script/Milvus/deep/: single_deep.ipynb
script/Milvus/enron/: milvus_mp_search.py  single_enron.ipynb
script/Milvus/gist/: milvus_mp_search.py  single_gist.ipynb
script/Milvus/glove/: milvus_mp_search.py  single_glove.ipynb
script/Milvus/msong/: milvus_mp_search.py  single_msong.ipynb
script/Milvus/sift/: milvus_mp_search.py  single_sift.ipynb
script/Milvus/t2i/ivf_flat/: 1_1000_ivf_sift.out  1_100_ivf_sift.out  1_150_ivf_sift.out  1_200_ivf_sift.out  1_300_ivf_sift.out  1_500_ivf_sift.out  1_50_ivf_sift.out  1_80_ivf_sift.out  2_1000_ivf_sift.out  2_100_ivf_sift.out  2_150_ivf_sift.out  2_200_ivf_sift.out  2_300_ivf_sift.out  2_500_ivf_sift.out  2_50_ivf_sift.out  2_80_ivf_sift.out  single.out
script/Milvus/wit/ivf_flat/: 2_100_ivf_wit.out  2_10_ivf_wit.out  2_15_ivf_wit.out  2_20_ivf_wit.out  2_30_ivf_wit.out  2_50_ivf_wit.out  2_5_ivf_wit.out  2_8_ivf_wit.out  8_100_ivf_wit.out  8_10_ivf_wit.out  8_15_ivf_wit.out  8_20_ivf_wit.out  8_30_ivf_wit.out  8_50_ivf_wit.out  8_5_ivf_wit.out  8_8_ivf_wit.out  single.out
script/Milvus/yt8m/: single_yt8m.ipynb
script/Milvus/yt8m/ivf_flat/: 2_100_ivf_yt8m.out  2_10_ivf_yt8m.out  2_15_ivf_deep.out  2_15_ivf_yt8m.out  2_20_ivf_yt8m.out  2_30_ivf_yt8m.out  2_50_ivf_yt8m.out  2_5_ivf_yt8m.out  2_8_ivf_yt8m.out  8_100_ivf_yt8m.out  8_10_ivf_yt8m.out  8_15_ivf_yt8m.out  8_20_ivf_yt8m.out  8_30_ivf_yt8m.out  8_50_ivf_yt8m.out  8_5_ivf_yt8m.out  8_8_ivf_yt8m.out  single.out
script/PASE/audio/: audio.ipynb  multi_processing.py
script/PASE/deep/: deep.ipynb
script/PASE/glove/: glove.ipynb  multi_processing.py
script/PASE/msong/: msong.ipynb  multi_processing.py
script/PASE/sift/: multi_processing.py  sift.ipynb
script/Puck/: run.sh
script/SeRF/: run.py  run_ood.py
script/UNG/: run_gt.py  run_ood.py  run_ung.py
script/VBASE/audio/: audio.ipynb  multi_processing.py
script/VBASE/audio/result/: 1_16_200_150.out  1_16_200_250.out  1_16_200_400.out  1_16_200_86.out  3_1_16_200_150.out  3_1_16_200_250.out  3_1_16_200_400.out  3_1_16_200_86.out  3_2_16_200_150.out  3_2_16_200_250.out  3_2_16_200_400.out  3_2_16_200_86.out  3_3_16_200_150.out  3_3_16_200_250.out  3_3_16_200_400.out  3_3_16_200_86.out  3_4_16_200_150.out  3_4_16_200_250.out  3_4_16_200_400.out  3_4_16_200_86.out  4_16_200_150.out  4_16_200_250.out  4_16_200_400.out  4_16_200_86.out  5_1_16_200_150.out  5_1_16_200_250.out  5_1_16_200_400.out  5_1_16_200_86.out  5_2_16_200_150.out  5_2_16_200_250.out  5_2_16_200_400.out  5_2_16_200_86.out  5_3_16_200_150.out  5_3_16_200_250.out  5_3_16_200_400.out  5_3_16_200_86.out  5_4_16_200_150.out  5_4_16_200_250.out  5_4_16_200_400.out  5_4_16_200_86.out  (+22 more)
script/VBASE/deep/: deep.ipynb
script/VBASE/deep/result/: 2_16_200_20.out
script/VBASE/enron/: enron.ipynb  multi_processing.py
script/VBASE/enron/result/: 1_16_200_150.out  1_16_200_250.out  1_16_200_400.out  1_16_200_86.out  3_1_16_200_150.out  3_1_16_200_250.out  3_1_16_200_400.out  3_1_16_200_86.out  3_2_16_200_150.out  3_2_16_200_250.out  3_2_16_200_400.out  3_2_16_200_86.out  3_3_16_200_150.out  3_3_16_200_250.out  3_3_16_200_400.out  3_3_16_200_86.out  3_4_16_200_150.out  3_4_16_200_250.out  3_4_16_200_400.out  3_4_16_200_86.out  4_16_200_150.out  4_16_200_250.out  4_16_200_400.out  4_16_200_86.out  5_1_16_200_150.out  5_1_16_200_250.out  5_1_16_200_400.out  5_1_16_200_86.out  5_2_16_200_150.out  5_2_16_200_250.out  5_2_16_200_400.out  5_2_16_200_86.out  5_3_16_200_150.out  5_3_16_200_250.out  5_3_16_200_400.out  5_3_16_200_86.out  5_4_16_200_150.out  5_4_16_200_250.out  5_4_16_200_400.out  5_4_16_200_86.out  (+21 more)
script/VBASE/gist/: gist.ipynb  multi_processing.py
script/VBASE/gist/result/: 1_16_200_86.out
script/VBASE/glove/: glove.ipynb  multi_processing.py
script/VBASE/glove/result/: 1_16_200_86.out
script/VBASE/msong/: msong.ipynb  multi_processing.py
script/VBASE/msong/result/: 1_16_200_86.out
script/VBASE/sift/: multi_processing.py  sift.ipynb
script/VBASE/text2image/: t2i.ipynb
script/VBASE/wit/: wit.ipynb
script/VBASE/yt8m/: yt8m.ipynb
script/WinFilter/: readme.md  run.py
script/iRange/: run.py
script/result/: audio_3_1_results.csv
